[package]
name = "classicube-minimap-plugin"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git", branch = "next" }
color-backtrace = { git = "https://github.com/SpiralP/color-backtrace-msgbox.git" }
error-chain = "0.12.2"
log = "0.4.8"
simplelog = "0.8.0"
