[package]
name = "classicube-minimap-plugin"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
color-backtrace = { git = "https://github.com/SpiralP/color-backtrace-msgbox.git" }
error-chain = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
